# precision_landing-vtol

./: .gitignore  README.md
src/aruco_tracker/: package.xml  setup.py
src/aruco_tracker/aruco_tracker/: auro_detector.py
src/offboard_control/: CMakeLists.txt  package.xml
src/offboard_control/config/: params.yaml
src/offboard_control/include/: offboard_control_node.hpp
src/offboard_control/include/data_types/: aruco_types.hpp  control_types.hpp  status_types.hpp  topic_types.hpp
src/offboard_control/launch/: gz_bridge_launch.py
src/offboard_control/lib/mathlib/inc/: transformations.hpp
src/offboard_control/lib/mathlib/src/: transformations.cpp
src/offboard_control/src/: commander.cpp  offboard_control_node.cpp
